exports[`Config -> config get returns the merged _defaults and _config 1`] = `
Object {
  "credentials": "same-origin",
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Content-Type": "application/json",
    "X-ACCESS-TOKE": "aasdljhf2kjrasdf2l3jrhn2",
  },
  "mode": "cors",
}
`;

exports[`Config -> config mergeWithDefaults does not mutate _config or _defaults 1`] = `
Object {
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Content-Type": "text/plain",
  },
  "mode": "cors",
}
`;

exports[`Config -> config mergeWithDefaults merges all the params passed 1`] = `
Object {
  "credentials": "same-origin",
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Content-Type": "text/plain",
  },
  "mode": "no-cors",
}
`;

exports[`Config -> config mergeWithDefaults returns body stringified according to Content-Type 1`] = `
Object {
  "body": "{\"foo\":\"bar\"}",
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Content-Type": "application/json",
  },
}
`;

exports[`Config -> config mergeWithDefaults returns the config merged with the params 1`] = `
Object {
  "credentials": "same-origin",
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Content-Type": "application/json",
  },
  "mode": "no-cors",
}
`;

exports[`Config -> config mergeWithDefaults returns the config merged with the params 2`] = `
Object {
  "credentials": "same-origin",
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Content-Type": "application/json",
  },
  "mode": "no-cors",
}
`;

exports[`Config -> config set merges the provided config with this._config 1`] = `
Object {
  "credentials": "same-origin",
  "headers": Object {
    "X-ACCESS-TOKEN": "aasdljhf2kjrasdf2l3jrhn2",
  },
  "mode": "cors",
}
`;
